--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "tatooapi",
+  "name": "crud-agendamento",
   "version": "1.0.0",
-  "description": "- Como instalar as dependências do projeto:",
-  "main": "index.js",
+  "description": "Crud Agendamento",
+  "main": "./src/main.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ./src/main.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/IplinskyLeo/tattooApi/issues"
   },
-  "homepage": "https://github.com/IplinskyLeo/tattooApi#readme"
+  "homepage": "https://github.com/IplinskyLeo/tattooApi#readme",
+  "dependencies": {
+    "express": "^4.18.1",
+    "nodemon": "^2.0.19",
+    "sqlite3": "^5.0.11"
+  }
 }
