--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon ./src/app.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/IplinskyLeo/tattooApi/issues"
   },
-  "homepage": "https://github.com/IplinskyLeo/tattooApi#readme"
+  "homepage": "https://github.com/IplinskyLeo/tattooApi#readme",
+  "dependencies": {
+    "express": "^4.18.1",
+    "nodemon": "^2.0.19",
+    "sqlite": "^4.1.2",
+    "sqlite3": "^5.0.11"
+  }
 }
