--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "dev": "nodemon ./src/main.js",
-    "start": "node ./src/main.js",
+    "start": "node ./src/database/create-and-populate.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
