rota tatuador concluida

--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
+  "type": "module",
   "scripts": {
+    "start": "node ./src/main.js",
+    "dev": "nodemon ./src/main.js",
+    "db": "node ./src/database/create-and-populate.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,8 +21,12 @@
   },
   "homepage": "https://github.com/IplinskyLeo/tattooApi#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "node": "^16.17.0",
     "sqlite3": "^5.0.11"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
